Project3/Windows/BisonProject/MainDriver/COOL.output
Terminals unused in grammar

   LET_STMT


State 5 conflicts: 1 shift/reduce
State 10 conflicts: 1 shift/reduce
State 136 conflicts: 9 shift/reduce
State 143 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | error ';'
    4           | class class_list
    5           | class_list error ';'

    6 class: CLASS TYPEID '{' optional_feature_list '}' ';'
    7      | CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';'

    8 optional_feature_list: /* empty */
    9                      | feature_list

   10 feature_list: feature
   11             | feature feature_list

   12 feature: OBJECTID '(' optional_formal_list ')' ':' TYPEID '{' expr '}' ';'
   13        | OBJECTID ':' TYPEID ';'
   14        | OBJECTID ':' TYPEID ASSIGN expr ';'

   15 optional_formal_list: /* empty */
   16                     | formal_list

   17 formal_list: formal
   18            | formal ',' formal_list

   19 formal: OBJECTID ':' TYPEID

   20 expr: error
   21     | OBJECTID ASSIGN expr
   22     | expr '.' OBJECTID '(' optional_expr_list ')'
   23     | expr '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   24     | OBJECTID '(' optional_expr_list ')'
   25     | IF expr THEN expr ELSE expr FI
   26     | WHILE expr LOOP expr POOL
   27     | '{' gt1_expr_list '}'
   28     | LET OBJECTID ':' TYPEID optional_let_list IN expr
   29     | LET OBJECTID ':' TYPEID ASSIGN expr optional_let_list IN expr
   30     | CASE expr OF case_list ESAC
   31     | NEW TYPEID
   32     | ISVOID expr
   33     | expr '+' expr
   34     | expr '-' expr
   35     | expr '*' expr
   36     | expr '/' expr
   37     | '~' expr
   38     | expr '<' expr
   39     | expr LE expr
   40     | expr '=' expr
   41     | NOT expr
   42     | '(' expr ')'
   43     | OBJECTID
   44     | INT_CONST
   45     | STR_CONST
   46     | BOOL_CONST

   47 optional_let_list: /* empty */
   48                  | let_list

   49 let_list: ',' OBJECTID ':' TYPEID
   50         | ',' OBJECTID ':' TYPEID ASSIGN expr
   51         | ',' OBJECTID ':' TYPEID let_list
   52         | ',' OBJECTID ':' TYPEID ASSIGN expr let_list

   53 case_list: OBJECTID ':' TYPEID DARROW expr ';'
   54          | OBJECTID ':' TYPEID DARROW expr ';' case_list

   55 gt1_expr_list: expr ';'
   56              | expr ';' gt1_expr_list

   57 optional_expr_list: /* empty */
   58                   | expr_list

   59 expr_list: expr
   60          | expr ',' expr_list


Terminals, with rules where they appear

$end (0) 0
'(' (40) 12 22 23 24 42
')' (41) 12 22 23 24 42
'*' (42) 35
'+' (43) 33
',' (44) 18 49 50 51 52 60
'-' (45) 34
'.' (46) 22 23
'/' (47) 36
':' (58) 12 13 14 19 28 29 49 50 51 52 53 54
';' (59) 3 5 6 7 12 13 14 53 54 55 56
'<' (60) 38
'=' (61) 40
'@' (64) 23
'{' (123) 6 7 12 27
'}' (125) 6 7 12 27
'~' (126) 37
error (256) 3 5 20
STR_CONST (258) 45
TYPEID (259) 6 7 12 13 14 19 23 28 29 31 49 50 51 52 53 54
OBJECTID (260) 12 13 14 19 21 22 23 24 28 29 43 49 50 51 52 53 54
INT_CONST (261) 44
BOOL_CONST (262) 46
CLASS (263) 6 7
ELSE (264) 25
FI (265) 25
IF (266) 25
IN (267) 28 29
INHERITS (268) 7
LET (269) 28 29
LOOP (270) 26
POOL (271) 26
THEN (272) 25
WHILE (273) 26
CASE (274) 30
ESAC (275) 30
OF (276) 30
DARROW (277) 53 54
NEW (278) 31
ISVOID (279) 32
ASSIGN (280) 14 21 29 50 52
NOT (281) 41
LE (282) 39
LET_STMT (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3 4 5, on right: 1 4 5
class (48)
    on left: 6 7, on right: 2 4
optional_feature_list (49)
    on left: 8 9, on right: 6 7
feature_list (50)
    on left: 10 11, on right: 9 11
feature (51)
    on left: 12 13 14, on right: 10 11
optional_formal_list (52)
    on left: 15 16, on right: 12
formal_list (53)
    on left: 17 18, on right: 16 18
formal (54)
    on left: 19, on right: 17 18
expr (55)
    on left: 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37
    38 39 40 41 42 43 44 45 46, on right: 12 14 21 22 23 25 26 28 29
    30 32 33 34 35 36 37 38 39 40 41 42 50 52 53 54 55 56 59 60
optional_let_list (56)
    on left: 47 48, on right: 28 29
let_list (57)
    on left: 49 50 51 52, on right: 48 51 52
case_list (58)
    on left: 53 54, on right: 30 54
gt1_expr_list (59)
    on left: 55 56, on right: 27 56
optional_expr_list (60)
    on left: 57 58, on right: 22 23 24
expr_list (61)
    on left: 59 60, on right: 58 60


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    3 class_list: error . ';'

    ';'  shift, and go to state 6


State 2

    6 class: CLASS . TYPEID '{' optional_feature_list '}' ';'
    7      | CLASS . TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: class_list .
    5 class_list: class_list . error ';'

    error  shift, and go to state 9

    $end  reduce using rule 1 (program)


State 5

    2 class_list: class .
    4           | class . class_list

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end   reduce using rule 2 (class_list)
    error  [reduce using rule 2 (class_list)]

    class_list  go to state 10
    class       go to state 5


State 6

    3 class_list: error ';' .

    $default  reduce using rule 3 (class_list)


State 7

    6 class: CLASS TYPEID . '{' optional_feature_list '}' ';'
    7      | CLASS TYPEID . INHERITS TYPEID '{' optional_feature_list '}' ';'

    INHERITS  shift, and go to state 11
    '{'       shift, and go to state 12


State 8

    0 $accept: program $end .

    $default  accept


State 9

    5 class_list: class_list error . ';'

    ';'  shift, and go to state 13


State 10

    4 class_list: class class_list .
    5           | class_list . error ';'

    error  shift, and go to state 9

    $end   reduce using rule 4 (class_list)
    error  [reduce using rule 4 (class_list)]


State 11

    7 class: CLASS TYPEID INHERITS . TYPEID '{' optional_feature_list '}' ';'

    TYPEID  shift, and go to state 14


State 12

    6 class: CLASS TYPEID '{' . optional_feature_list '}' ';'

    OBJECTID  shift, and go to state 15

    $default  reduce using rule 8 (optional_feature_list)

    optional_feature_list  go to state 16
    feature_list           go to state 17
    feature                go to state 18


State 13

    5 class_list: class_list error ';' .

    $default  reduce using rule 5 (class_list)


State 14

    7 class: CLASS TYPEID INHERITS TYPEID . '{' optional_feature_list '}' ';'

    '{'  shift, and go to state 19


State 15

   12 feature: OBJECTID . '(' optional_formal_list ')' ':' TYPEID '{' expr '}' ';'
   13        | OBJECTID . ':' TYPEID ';'
   14        | OBJECTID . ':' TYPEID ASSIGN expr ';'

    '('  shift, and go to state 20
    ':'  shift, and go to state 21


State 16

    6 class: CLASS TYPEID '{' optional_feature_list . '}' ';'

    '}'  shift, and go to state 22


State 17

    9 optional_feature_list: feature_list .

    $default  reduce using rule 9 (optional_feature_list)


State 18

   10 feature_list: feature .
   11             | feature . feature_list

    OBJECTID  shift, and go to state 15

    $default  reduce using rule 10 (feature_list)

    feature_list  go to state 23
    feature       go to state 18


State 19

    7 class: CLASS TYPEID INHERITS TYPEID '{' . optional_feature_list '}' ';'

    OBJECTID  shift, and go to state 15

    $default  reduce using rule 8 (optional_feature_list)

    optional_feature_list  go to state 24
    feature_list           go to state 17
    feature                go to state 18


State 20

   12 feature: OBJECTID '(' . optional_formal_list ')' ':' TYPEID '{' expr '}' ';'

    OBJECTID  shift, and go to state 25

    $default  reduce using rule 15 (optional_formal_list)

    optional_formal_list  go to state 26
    formal_list           go to state 27
    formal                go to state 28


State 21

   13 feature: OBJECTID ':' . TYPEID ';'
   14        | OBJECTID ':' . TYPEID ASSIGN expr ';'

    TYPEID  shift, and go to state 29


State 22

    6 class: CLASS TYPEID '{' optional_feature_list '}' . ';'

    ';'  shift, and go to state 30


State 23

   11 feature_list: feature feature_list .

    $default  reduce using rule 11 (feature_list)


State 24

    7 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list . '}' ';'

    '}'  shift, and go to state 31


State 25

   19 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 32


State 26

   12 feature: OBJECTID '(' optional_formal_list . ')' ':' TYPEID '{' expr '}' ';'

    ')'  shift, and go to state 33


State 27

   16 optional_formal_list: formal_list .

    $default  reduce using rule 16 (optional_formal_list)


State 28

   17 formal_list: formal .
   18            | formal . ',' formal_list

    ','  shift, and go to state 34

    $default  reduce using rule 17 (formal_list)


State 29

   13 feature: OBJECTID ':' TYPEID . ';'
   14        | OBJECTID ':' TYPEID . ASSIGN expr ';'

    ASSIGN  shift, and go to state 35
    ';'     shift, and go to state 36


State 30

    6 class: CLASS TYPEID '{' optional_feature_list '}' ';' .

    $default  reduce using rule 6 (class)


State 31

    7 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' . ';'

    ';'  shift, and go to state 37


State 32

   19 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 38


State 33

   12 feature: OBJECTID '(' optional_formal_list ')' . ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 39


State 34

   18 formal_list: formal ',' . formal_list

    OBJECTID  shift, and go to state 25

    formal_list  go to state 40
    formal       go to state 28


State 35

   14 feature: OBJECTID ':' TYPEID ASSIGN . expr ';'

    error       shift, and go to state 41
    STR_CONST   shift, and go to state 42
    OBJECTID    shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 56


State 36

   13 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 13 (feature)


State 37

    7 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';' .

    $default  reduce using rule 7 (class)


State 38

   19 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 19 (formal)


State 39

   12 feature: OBJECTID '(' optional_formal_list ')' ':' . TYPEID '{' expr '}' ';'

    TYPEID  shift, and go to state 57


State 40

   18 formal_list: formal ',' formal_list .

    $default  reduce using rule 18 (formal_list)


State 41

   20 expr: error .

    $default  reduce using rule 20 (expr)


State 42

   45 expr: STR_CONST .

    $default  reduce using rule 45 (expr)


State 43

   21 expr: OBJECTID . ASSIGN expr
   24     | OBJECTID . '(' optional_expr_list ')'
   43     | OBJECTID .

    ASSIGN  shift, and go to state 58
    '('     shift, and go to state 59

    $default  reduce using rule 43 (expr)


State 44

   44 expr: INT_CONST .

    $default  reduce using rule 44 (expr)


State 45

   46 expr: BOOL_CONST .

    $default  reduce using rule 46 (expr)


State 46

   25 expr: IF . expr THEN expr ELSE expr FI

    error       shift, and go to state 41
    STR_CONST   shift, and go to state 42
    OBJECTID    shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 60


State 47

   28 expr: LET . OBJECTID ':' TYPEID optional_let_list IN expr
   29     | LET . OBJECTID ':' TYPEID ASSIGN expr optional_let_list IN expr

    OBJECTID  shift, and go to state 61


State 48

   26 expr: WHILE . expr LOOP expr POOL

    error       shift, and go to state 41
    STR_CONST   shift, and go to state 42
    OBJECTID    shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 62


State 49

   30 expr: CASE . expr OF case_list ESAC

    error       shift, and go to state 41
    STR_CONST   shift, and go to state 42
    OBJECTID    shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 63


State 50

   31 expr: NEW . TYPEID

    TYPEID  shift, and go to state 64


State 51

   32 expr: ISVOID . expr

    error       shift, and go to state 41
    STR_CONST   shift, and go to state 42
    OBJECTID    shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 65


State 52

   41 expr: NOT . expr

    error       shift, and go to state 41
    STR_CONST   shift, and go to state 42
    OBJECTID    shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 66


State 53

   37 expr: '~' . expr

    error       shift, and go to state 41
    STR_CONST   shift, and go to state 42
    OBJECTID    shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 67


State 54

   27 expr: '{' . gt1_expr_list '}'

    error       shift, and go to state 41
    STR_CONST   shift, and go to state 42
    OBJECTID    shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr           go to state 68
    gt1_expr_list  go to state 69


State 55

   42 expr: '(' . expr ')'

    error       shift, and go to state 41
    STR_CONST   shift, and go to state 42
    OBJECTID    shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 70


State 56

   14 feature: OBJECTID ':' TYPEID ASSIGN expr . ';'
   22 expr: expr . '.' OBJECTID '(' optional_expr_list ')'
   23     | expr . '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . LE expr
   40     | expr . '=' expr

    LE   shift, and go to state 71
    '<'  shift, and go to state 72
    '='  shift, and go to state 73
    '-'  shift, and go to state 74
    '+'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '@'  shift, and go to state 78
    '.'  shift, and go to state 79
    ';'  shift, and go to state 80


State 57

   12 feature: OBJECTID '(' optional_formal_list ')' ':' TYPEID . '{' expr '}' ';'

    '{'  shift, and go to state 81


State 58

   21 expr: OBJECTID ASSIGN . expr

    error       shift, and go to state 41
    STR_CONST   shift, and go to state 42
    OBJECTID    shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 82


State 59

   24 expr: OBJECTID '(' . optional_expr_list ')'

    error       shift, and go to state 41
    STR_CONST   shift, and go to state 42
    OBJECTID    shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    ')'  reduce using rule 57 (optional_expr_list)

    expr                go to state 83
    optional_expr_list  go to state 84
    expr_list           go to state 85


State 60

   22 expr: expr . '.' OBJECTID '(' optional_expr_list ')'
   23     | expr . '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   25     | IF expr . THEN expr ELSE expr FI
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . LE expr
   40     | expr . '=' expr

    THEN  shift, and go to state 86
    LE    shift, and go to state 71
    '<'   shift, and go to state 72
    '='   shift, and go to state 73
    '-'   shift, and go to state 74
    '+'   shift, and go to state 75
    '*'   shift, and go to state 76
    '/'   shift, and go to state 77
    '@'   shift, and go to state 78
    '.'   shift, and go to state 79


State 61

   28 expr: LET OBJECTID . ':' TYPEID optional_let_list IN expr
   29     | LET OBJECTID . ':' TYPEID ASSIGN expr optional_let_list IN expr

    ':'  shift, and go to state 87


State 62

   22 expr: expr . '.' OBJECTID '(' optional_expr_list ')'
   23     | expr . '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   26     | WHILE expr . LOOP expr POOL
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . LE expr
   40     | expr . '=' expr

    LOOP  shift, and go to state 88
    LE    shift, and go to state 71
    '<'   shift, and go to state 72
    '='   shift, and go to state 73
    '-'   shift, and go to state 74
    '+'   shift, and go to state 75
    '*'   shift, and go to state 76
    '/'   shift, and go to state 77
    '@'   shift, and go to state 78
    '.'   shift, and go to state 79


State 63

   22 expr: expr . '.' OBJECTID '(' optional_expr_list ')'
   23     | expr . '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   30     | CASE expr . OF case_list ESAC
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . LE expr
   40     | expr . '=' expr

    OF   shift, and go to state 89
    LE   shift, and go to state 71
    '<'  shift, and go to state 72
    '='  shift, and go to state 73
    '-'  shift, and go to state 74
    '+'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '@'  shift, and go to state 78
    '.'  shift, and go to state 79


State 64

   31 expr: NEW TYPEID .

    $default  reduce using rule 31 (expr)


State 65

   22 expr: expr . '.' OBJECTID '(' optional_expr_list ')'
   23     | expr . '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   32     | ISVOID expr .
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . LE expr
   40     | expr . '=' expr

    '@'  shift, and go to state 78
    '.'  shift, and go to state 79

    $default  reduce using rule 32 (expr)


State 66

   22 expr: expr . '.' OBJECTID '(' optional_expr_list ')'
   23     | expr . '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . LE expr
   40     | expr . '=' expr
   41     | NOT expr .

    LE   shift, and go to state 71
    '<'  shift, and go to state 72
    '='  shift, and go to state 73
    '-'  shift, and go to state 74
    '+'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '@'  shift, and go to state 78
    '.'  shift, and go to state 79

    $default  reduce using rule 41 (expr)


State 67

   22 expr: expr . '.' OBJECTID '(' optional_expr_list ')'
   23     | expr . '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   37     | '~' expr .
   38     | expr . '<' expr
   39     | expr . LE expr
   40     | expr . '=' expr

    '@'  shift, and go to state 78
    '.'  shift, and go to state 79

    $default  reduce using rule 37 (expr)


State 68

   22 expr: expr . '.' OBJECTID '(' optional_expr_list ')'
   23     | expr . '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . LE expr
   40     | expr . '=' expr
   55 gt1_expr_list: expr . ';'
   56              | expr . ';' gt1_expr_list

    LE   shift, and go to state 71
    '<'  shift, and go to state 72
    '='  shift, and go to state 73
    '-'  shift, and go to state 74
    '+'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '@'  shift, and go to state 78
    '.'  shift, and go to state 79
    ';'  shift, and go to state 90


State 69

   27 expr: '{' gt1_expr_list . '}'

    '}'  shift, and go to state 91


State 70

   22 expr: expr . '.' OBJECTID '(' optional_expr_list ')'
   23     | expr . '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . LE expr
   40     | expr . '=' expr
   42     | '(' expr . ')'

    LE   shift, and go to state 71
    '<'  shift, and go to state 72
    '='  shift, and go to state 73
    '-'  shift, and go to state 74
    '+'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '@'  shift, and go to state 78
    '.'  shift, and go to state 79
    ')'  shift, and go to state 92


State 71

   39 expr: expr LE . expr

    error       shift, and go to state 41
    STR_CONST   shift, and go to state 42
    OBJECTID    shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 93


State 72

   38 expr: expr '<' . expr

    error       shift, and go to state 41
    STR_CONST   shift, and go to state 42
    OBJECTID    shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 94


State 73

   40 expr: expr '=' . expr

    error       shift, and go to state 41
    STR_CONST   shift, and go to state 42
    OBJECTID    shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 95


State 74

   34 expr: expr '-' . expr

    error       shift, and go to state 41
    STR_CONST   shift, and go to state 42
    OBJECTID    shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    IF          shift, and go to state 46
    LET         shift, and go to state 47
    WHILE       shift, and go to state 48
    CASE        shift, and go to state 49
    NEW         shift, and go to state 50
    ISVOID      shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 96


State 75

   33 expr: expr '+' . expr

    error       shift, and go to state 41
    STR_CONST   shift, and go to state 42
    OBJECTID    shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
